--- a/Analysis_&_Conclusion_Summaries.ipynb
+++ b/Analysis_&_Conclusion_Summaries.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Analysis & Conclusion Summaries.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHVY1TxXNkBuf7Y9gdwuAU",
+      "authorship_tag": "ABX9TyPZa5o5F7/Gca+PzPeGtyrO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,7 +209,8 @@
         "- Tune momentum and learning rate in loss functions\n",
         "- Try to get accuracy for Neural Network Models at 68%. \n",
         "- Have more modern data for Post Covid, as Data I use is from 2017\n",
-        "(I think results are vastly different now compared to then) "
+        "(I think results are vastly different now compared to then)\n",
+        "- Incorporate Natural Language Processing  "
       ]
     }
   ]
